Fixed alignment on search results & customization

--- a/less/sidebar.addsection.less
+++ b/less/sidebar.addsection.less
@@ -28,8 +28,8 @@ input.searchbox {
 input.searchbutton {
 	border-style: none;
 	display: inline-block;
-	height: 26px;
-	width: 75px;
+	height: 2.5em;
+	width: 6.3em;
 	font-family: 'Lato';
 	font-size: 0.75em;
 	letter-spacing: 0.7px;
@@ -66,7 +66,10 @@ input.searchbutton {
 }
 
 .course-results-list {
-	min-height: 300px;
+	height: 21.5em;
+	overflow: auto;
+	width: 20.9em;
+	margin-top: 1.2em;
 }
 
 .class-added-list {
